# sead

./: .gitignore  README.md  demo_iterator.py  demo_offline.py  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
src/sead/: __init__.py  audio_utils.py  class_mapping.py  cli.py  config.py  detector.py  iterator.py  model_utils.py  segment_builder.py  smoothing.py  temporal_decoder.py  test_sead.py
